general garbage collection implemented, but only tested for a really simple case

--- a/Droml/Makefile
+++ b/Droml/Makefile
@@ -6,6 +6,8 @@ gc:
 intrinsics:
 	clang -c cutils/runtime.c -o cutils/runtime.o -O3
 
-all: gc intrinsics
+compiler:
 	ocamlbuild -pkg num main.native
 	mv main.native droml
+
+all: gc intrinsics compiler
