--- a/Droml/Makefile
+++ b/Droml/Makefile
@@ -2,20 +2,30 @@ SHELL = /bin/bash
 
 
 OFLAGS = -O3
-WFLAGS = -Wall -Wextra -Wpedantic
+WFLAGS = -Wall
 
 COMPILE = clang $(OFLAGS) $(WFLAGS)
 
 
+OUT = obj
+STDLIB = cutils/drmstdlib
+
+INCL = -I cutils/
+
+
 gc:
-	clang -fpic -shared cutils/gc.cpp -o cutils/gc.so -O3
+	clang -fpic -shared cutils/gc.cpp -o $(OUT)/gc.so -O3
 
 intrinsics:
-	$(COMPILE) -c cutils/common.c -o cutils/common.o
-	$(COMPILE) -c cutils/intrinsics.c -o cutils/intrinsics.o
-	$(COMPILE) -c cutils/runtime.c -o cutils/runtime.o
-	$(COMPILE) -c cutils/sprintflib.c -o cutils/sprintflib.o
-	clang -fpic -shared cutils/listops.cpp -o cutils/listops.so -O3
+	$(COMPILE) $(INCL) -o $(OUT)/File.o -c $(STDLIB)/File.c
+	$(COMPILE) $(INCL) -o $(OUT)/IO.o -c $(STDLIB)/IO.c
+	$(COMPILE) $(INCL) -o $(OUT)/Math.o -c $(STDLIB)/Math.c
+	$(COMPILE) $(INCL) -o $(OUT)/Str.o -c $(STDLIB)/Str.c
+	$(COMPILE) -c cutils/common.c -o $(OUT)/common.o
+	$(COMPILE) -c cutils/intrinsics.c -o $(OUT)/intrinsics.o
+	$(COMPILE) -c cutils/sprintflib.c -o $(OUT)/sprintflib.o
+	clang -fpic -shared cutils/listops.cpp -o $(OUT)/listops.so -O3
+	clang -fpic -shared -I cutils/ cutils/drmstdlib/cpputils/File.cpp -o $(OUT)/cpputils_File.so -O3
 
 compiler:
 	ocamlbuild -pkg num main.native
@@ -24,7 +34,7 @@ compiler:
 all: gc intrinsics compiler
 
 clean:
-	rm -f cutils/*.o || true
+	rm -f $(OUT)/* || true
 	rm -f droml || true
 	rm -f Out.ll || true
 	rm -f Out.s || true
