native functions, simpler extensions to the standard library

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,25 @@
+.vscode/
+
 Doc/Doc.aux
 Doc/Doc.log
 Doc/Doc.out
 Doc/Doc.synctex.gz
 Doc/Doc.toc
-TODO.txt
-.vscode/
-Droml/DEBUG.txt
+
 Droml/_build/
-Droml/obj/*.*
-Droml/Notes/
 Droml/.vscode/
+Droml/Notes/
+Droml/obj/
+
+Droml/cutils/drmstdlib/drmstdlib/_build
+
 Droml/a.out
-Droml/cutils/drmstdlib/drmstdlib
+Droml/DEBUG.txt
 Droml/droml
 Droml/Out.ll
 Droml/Out.s
 Droml/Test.drm
+
 LLVMTest/
+
+TODO.txt
