added system and time utilities to standard library

--- a/Droml/Makefile
+++ b/Droml/Makefile
@@ -35,8 +35,11 @@ stdlib:
 	$(COMPILE) $(INCL) -o $(OUT)/Math.o  -c $(STDLIB)/Math.c
 	$(COMPILE) $(INCL) -o $(OUT)/Str.o   -c $(STDLIB)/Str.c
 	$(COMPILE) $(INCL) -o $(OUT)/Regex.o -c $(STDLIB)/Regex.c
-	$(COMPILE_LIB) -I cutils/ cutils/drmstdlib/cpputils/File.cpp -o  $(OUT)/cpputils_File.so
+	$(COMPILE) $(INCL) -o $(OUT)/Sys.o   -c $(STDLIB)/Sys.c
+	$(COMPILE) $(INCL) -o $(OUT)/Time.o  -c $(STDLIB)/Time.c
+	$(COMPILE_LIB) -I cutils/ cutils/drmstdlib/cpputils/File.cpp  -o $(OUT)/cpputils_File.so
 	$(COMPILE_LIB) -I cutils/ cutils/drmstdlib/cpputils/Regex.cpp -o $(OUT)/cpputils_Regex.so
+	$(COMPILE_LIB) -I cutils/ cutils/drmstdlib/cpputils/Time.cpp  -o $(OUT)/cpputils_Time.so
 
 all: setup gc intrinsics stdlib compiler
 
