--- a/Droml/droml.config
+++ b/Droml/droml.config
@@ -1,1 +1,3 @@
 tabsize=4
+drmlibs="Drmstdlib.drm"
+cpplibs="obj/gc.so","obj/listops.so","obj/templ_intrinsics.so","obj/cpputils_File.so","obj/cpputils_Regex.so","obj/cpputils_Time.so"
